--- a/projects/perception/lightweight_open_pose/demos/inference_tutorial.ipynb
+++ b/projects/perception/lightweight_open_pose/demos/inference_tutorial.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from perception.pose_estimation.lightweight_open_pose.lightweight_open_pose_learner import \\\n",
+    "from opendr.perception.pose_estimation.lightweight_open_pose.lightweight_open_pose_learner import \\\n",
     "    LightweightOpenPoseLearner"
    ]
   },
@@ -74,8 +74,7 @@
      "output_type": "stream",
      "text": [
       "Downloading pretrained model...\n",
-      "Metadata json file already exists.\n",
-      "Trained model .pth file already exists.\n",
+      "Downloaded metadata json.\n",
       "Pretrained model download complete.\n"
      ]
     }
@@ -134,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f038d2d9f10>"
+       "<matplotlib.image.AxesImage at 0x7f4c89d077f0>"
       ]
      },
      "execution_count": 6,
@@ -170,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "bigger-negative",
    "metadata": {},
    "outputs": [],
@@ -180,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "published-blackjack",
    "metadata": {},
    "outputs": [
@@ -188,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<perception.pose_estimation.lightweight_open_pose.filtered_pose.FilteredPose object at 0x7f038d237c70>]\n"
+      "[<opendr.perception.pose_estimation.lightweight_open_pose.filtered_pose.FilteredPose object at 0x7f4c89c8e5e0>]\n"
      ]
     }
    ],
@@ -206,17 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "respective-level",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f038c1f5550>"
+       "<matplotlib.image.AxesImage at 0x7f4c89c4b970>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -234,7 +233,7 @@
     }
    ],
    "source": [
-    "from perception.pose_estimation.lightweight_open_pose.utilities import draw\n",
+    "from opendr.perception.pose_estimation.lightweight_open_pose.utilities import draw\n",
     "for pose in poses:\n",
     "        draw(img, pose)\n",
     "plt.imshow(img)\n"
@@ -250,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "lightweight-batman",
    "metadata": {},
    "outputs": [
@@ -293,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "arbitrary-composition",
    "metadata": {},
    "outputs": [
@@ -306,7 +305,7 @@
     }
    ],
    "source": [
-    "from engine.target import Pose\n",
+    "from opendr.engine.target import Pose\n",
     "print(Pose.kpt_names)"
    ]
   },
@@ -320,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "choice-verification",
    "metadata": {},
    "outputs": [
@@ -346,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "wrapped-greeting",
    "metadata": {},
    "outputs": [
