human-model-generation-project

--- a/projects/simulation/human_model_generation/demos/model_generation.ipynb
+++ b/projects/simulation/human_model_generation/demos/model_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from PIL import Image\n",
     "import os\n",
     "sys.path.append(\"./../../../../\")\n",
-    "from projects.simulation.human_model_generation.pifu_generator import PIFuGenerator\n",
+    "from src.opendr.simulation.human_model_generation.pifu_generator_learner import PIFuGeneratorLearner\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "current_dir = os.getcwd()"
@@ -18,16 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f0d3f37fdd0>"
+       "<matplotlib.image.AxesImage at 0x7f8cd2f53890>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -65,24 +65,25 @@
      "text": [
       "initialize network with normal\n",
       "Using Network:  hgpifu\n",
-      "loading for net C ... ./../../../../projects/simulation/human_model_generation/PIFu/checkpoints/net_C\n",
+      "loading for net C ... ./../../../../src/opendr/simulation/human_model_generation/utilities/PIFu/checkpoints/net_C\n",
       "initialize network with normal\n",
       "Downloading pretrained model...\n",
-      "Downloaded metadata json.\n",
+      "Metadata json file already exists.\n",
+      "Trained model .pth file already exists.\n",
       "Pretrained model download complete.\n"
      ]
     }
    ],
    "source": [
     "# Initialize PIFu and infer \n",
-    "model_generator = PIFuGenerator(device='cuda')\n",
+    "model_generator = PIFuGeneratorLearner(device='cuda')\n",
     "[model_3D, human_pose_3D] = model_generator.infer(imgs_rgb=[rgb_img], imgs_msk=[msk_img], extract_pose=True)\n",
     "#model_3D = model_generator.infer(imgs_rgb=[rgb_img], imgs_msk=[msk_img])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,16 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f0d318605d0>"
+       "<matplotlib.image.AxesImage at 0x7f8d2c3611d0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
