--- a/projects/simulation/human_model_generation/demos/model_generation.ipynb
+++ b/projects/simulation/human_model_generation/demos/model_generation.ipynb
@@ -73,7 +73,7 @@
    ],
    "source": [
     "# Initialize PIFu and infer \n",
-    "model_generator = PIFuGeneratorLearner(device='cuda')\n",
+    "model_generator = PIFuGeneratorLearner(device='cuda', checkpoint_dir='./temp')\n",
     "[model_3D, human_pose_3D] = model_generator.infer(imgs_rgb=[rgb_img], imgs_msk=[msk_img], extract_pose=True)\n",
     "#model_3D = model_generator.infer(imgs_rgb=[rgb_img], imgs_msk=[msk_img])"
    ]
