--- a/projects/simulation/human_model_generation/demos/model_generation.ipynb
+++ b/projects/simulation/human_model_generation/demos/model_generation.ipynb
@@ -85,8 +85,8 @@
    "source": [
     "# Get renderings of the 3D model in various views (rotations)\n",
     "rotations = [0, 45, 90, 180]\n",
-    "[out_imgs, human_pose_2D] = model_generator.get_img_views(model_3D = model_3D, rotations = rotations, human_pose_3D = human_pose_3D, plot_kps=False)\n",
-    "#out_imgs = model_generator.get_imgs_views(model_3D = model_3D, rotations = rotations)"
+    "[out_imgs, human_pose_2D] = model_3D.get_img_views(rotations = rotations, human_pose_3D = human_pose_3D, plot_kps=False)\n",
+    "#out_imgs = model_3D.get_imgs_views(rotations = rotations)"
    ]
   },
   {
