--- a/projects/perception/face_recognition/demos/inference_tutorial.ipynb
+++ b/projects/perception/face_recognition/demos/inference_tutorial.ipynb
@@ -21,7 +21,7 @@
    },
    "outputs": [],
    "source": [
-    "from opendr.perception.face_recognition.face_recognition_learner import FaceRecognitionLearner"
+    "from opendr.perception.face_recognition import FaceRecognitionLearner"
    ]
   },
   {
@@ -255,7 +255,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -269,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
