--- a/projects/perception/lightweight_open_pose/demos/inference_tutorial.ipynb
+++ b/projects/perception/lightweight_open_pose/demos/inference_tutorial.ipynb
@@ -25,8 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from opendr.perception.pose_estimation.lightweight_open_pose.lightweight_open_pose_learner import \\\n",
-    "    LightweightOpenPoseLearner"
+    "from opendr.perception.pose_estimation import LightweightOpenPoseLearner"
    ]
   },
   {
@@ -382,7 +381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -396,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
