--- a/projects/perception/object_detection_2d/detr/inference_tutorial.ipynb
+++ b/projects/perception/object_detection_2d/detr/inference_tutorial.ipynb
@@ -34,7 +34,7 @@
    },
    "outputs": [],
    "source": [
-    "from opendr.perception.object_detection_2d.detr.detr_learner import DetrLearner\n",
+    "from opendr.perception.object_detection_2d import DetrLearner\n",
     "\n",
     "learner = DetrLearner(device='cuda', backbone='resnet101', threshold=0.7)"
    ]
@@ -327,7 +327,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -341,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
