--- a/projects/perception/object_detection_2d/gem/inference_tutorial.ipynb
+++ b/projects/perception/object_detection_2d/gem/inference_tutorial.ipynb
@@ -39,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "from opendr.perception.object_detection_2d.gem.gem_learner import GemLearner\n",
+    "from opendr.perception.object_detection_2d import GemLearner\n",
     "\n",
     "learner = GemLearner(num_classes=7, device='cpu')"
    ]
@@ -271,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -285,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
