--- a/projects/simulation/human_model_generation/demos/model_generation.ipynb
+++ b/projects/simulation/human_model_generation/demos/model_generation.ipynb
@@ -21,7 +21,7 @@
     "import cv2\n",
     "import os\n",
     "from opendr.engine.data import Image\n",
-    "from opendr.simulation.human_model_generation.pifu_generator_learner import PIFuGeneratorLearner\n",
+    "from opendr.simulation.human_model_generation import PIFuGeneratorLearner\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "current_dir = os.getcwd()"
@@ -176,9 +176,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -190,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
