--- a/projects/perception/object_detection_2d/gem/inference_tutorial.ipynb
+++ b/projects/perception/object_detection_2d/gem/inference_tutorial.ipynb
@@ -13,11 +13,11 @@
     "\n",
     "\n",
     "#### References\n",
-    "<a name=\"detr-paper\" href=\"https://ai.facebook.com/research/publications/end-to-end-object-detection-with-transformers\">[1]</a> End-to-end Object Detection with Transformers,\n",
+    "<a name=\"detr-paper\" href=\"https://ai.facebook.com/research/publications/end-to-end-object-detection-with-transformers\">[1]</a> Carion N., Massa F., Synnaeve G., Usunier N., Kirillov A., Zagoruyko S. (2020) End-to-End Object Detection with Transformers. In: Vedaldi A., Bischof H., Brox T., Frahm JM. (eds) Computer Vision – ECCV 2020. ECCV 2020. Lecture Notes in Computer Science, vol 12346. Springer, Cham. [doi](https://doi.org/10.1007/978-3-030-58452-8_13),\n",
     "[arXiv](https://arxiv.org/abs/2005.12872).\n",
     "\n",
-    "<a name=\"gem-paper\">[2]</a> GEM: Glare or Gloom, I Can Still See You -- End-to-End Multimodal Object Detection\n",
-    "[arXiv](https://arxiv.org/abs/2102.12319).\n"
+    "<a name=\"gem-paper\">[2]</a> Mazhar, O., Babuska, R., & Kober, J. (2021). GEM: Glare or Gloom, I Can Still See You - End-to-End Multi-Modal Object Detection. IEEE Robotics and Automation Letters, 6(4), 6321-6328. [doi](https://doi.org/10.1109/LRA.2021.3093871), [arXiv](https://arxiv.org/abs/2102.12319).\n",
+    "\n"
    ]
   },
   {
